# paragraph-summary-service

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: ARTIFACT_PROVENANCE.md  DEMO_WORKFLOW.md  PROVIDER_ERROR_SEMANTICS.md  SUMMARY_JOB_LIFECYCLE.md  architecture.md  deepreader-adapter-contract.md  deepreader-integration.md  gemini-live-smoke-test.md  gemini-provider.md  validation-log.md
examples/: gemini_smoke_request.json  paragraph_request.json  sample.md
src/paragraph_summary_service/: cli.py
src/paragraph_summary_service/api/: app.py  errors.py  routes_artifacts.py  routes_health.py  routes_paragraph_summaries.py
src/paragraph_summary_service/artifacts/: ids.py  writer.py
src/paragraph_summary_service/batching/: minute_packer.py
src/paragraph_summary_service/cache/: keys.py
src/paragraph_summary_service/config/: settings.py
src/paragraph_summary_service/models/: domain.py  requests.py  responses.py
src/paragraph_summary_service/observability/: structured_logger.py
src/paragraph_summary_service/prompts/: renderer.py  templates.py
src/paragraph_summary_service/providers/: base.py  (+3 more)
tests/: conftest.py  test_artifact_privacy.py  test_cache_key.py  test_file_upload_endpoint.py  test_gemini_status_normalization.py  test_health_endpoint.py  test_lightweight_splitter.py  test_mock_provider_determinism.py  test_paragraph_endpoint_mock.py  test_provider_safety.py  test_redaction_and_logging.py  test_request_validation.py  test_token_packer.py
(+9 files in other folders)
