[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paragraph-summary-service"
version = "0.1.1"
description = "Gemini-backed paragraph summary artifact service for DeepReader retrieval enhancement."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Portfolio Project" }]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "python-multipart>=0.0.9",
  "httpx>=0.27"
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.4"]

[project.scripts]
paragraph-summary-service = "paragraph_summary_service.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/paragraph_summary_service"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
